bk_ida/gccida/g1/alter_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_reg/src/reload1.c:2454:29: error: use of undeclared identifier 'machine_mode'
v12 = assign_stack_local( ( machine_mode)( unsigned __int8)i, v11, -( v10 > v9)); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_reg/src/reload1.c:2454:44: error: expected expression
v12 = assign_stack_local( ( machine_mode)( unsigned __int8)i, v11, -( v10 > v9)); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_reg/src/reload1.c:2466:29: error: use of undeclared identifier 'machine_mode'
v12 = assign_stack_local( ( machine_mode)i, v11, -( v11 != v9)); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_reg/src/reload1.c:2470:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64 *)v14[1]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_reg/src/reload1.c:2497:32: error: use of undeclared identifier 'machine_mode'
v17 = adjust_address_1( v12, ( machine_mode)*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[v3] + 2), 0LL, 0, 1); 
                               ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/alter_reg/src/obj/reload1.o] Error 1
